--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/timdavidson2/noteTaker#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
