--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/timdavidson2/noteTaker#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "heroku": "^7.56.1",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
